feat: get data from html page

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,8 +55,10 @@
                 Пример: b563feb7b2b84b6test
             </div>
             <div>
-                <input type="text" />
-                <button>GO</button>
+                <form action="/order">
+                    <input type="text" id="id" name="id" value=""/>
+                    <button type="submit" value="Submit">GO</button>
+                </form>
             </div>
 
             <br />
