--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            height: 100vh;
+            height: 100dvh;
             width: 100vw;
             background: linear-gradient(#e664db, #c291e5);
         }
@@ -55,14 +55,14 @@
                 Пример: b563feb7b2b84b6test
             </div>
             <div>
-                <form action="/order">
+                <form action="/orders">
                     <input type="text" id="id" name="id" value=""/>
                     <button type="submit" value="Submit">GO</button>
                 </form>
             </div>
 
             <br />
-
+            {{if .Order_uid }}
             <div>
                 <b>{{ .Order_uid}}</b>
             </div>
@@ -98,6 +98,7 @@
             <div>
                 <b>Данные целиком:</b> {{ .}}
             </div>
+            {{end}}
         </div>
     </div>
 </body>
